# brain

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.brain/: ARCHITECTURE.md  CURRENT_STATE.md  NEXT_TASK.md  PROJECT_MEMORY.md  PROJECT_RULES.md  SESSION_LOG.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/desktop/: pyproject.toml
apps/desktop/src/brain/desktop/: __init__.py  main.py
apps/web/: index.html  package.json
apps/web/src/: App.tsx  index.css
docs/: INDEX.md  README.md  SUMMARY.md
docs/00-project/: 01-Vision.md  README.md
docs/01-product/: 02-Product-Requirements.md  README.md
docs/02-architecture/: 01-Software-Architecture.md  README.md
docs/03-engineering/: README.md
docs/04-ai/: README.md
docs/05-storage/: README.md
docs/06-api/: README.md
docs/07-desktop/: README.md
docs/08-web/: README.md
docs/09-testing/: README.md
docs/10-roadmap/: README.md
docs/11-adr/: README.md
docs/12-tasks/: README.md
docs/decisions/: BRN-DEC-001-template.md
docs/guides/: BRN-GUIDE-001-engineering.md  BRN-GUIDE-002-desktop.md  BRN-GUIDE-003-web.md  BRN-GUIDE-004-testing.md  BRN-GUIDE-005-user-guide.md
docs/references/: BRN-REF-001-roadmap.md  BRN-REF-002-tasks.md
docs/specifications/: BRN-SPEC-001-vision.md  BRN-SPEC-002-mission.md  BRN-SPEC-003-principles.md  BRN-SPEC-004-goals.md  BRN-SPEC-005-nongoals.md  BRN-SPEC-006-prd.md  BRN-SPEC-007-user-stories.md  BRN-SPEC-008-personas.md  BRN-SPEC-009-sad.md  BRN-SPEC-010-ai.md  BRN-SPEC-011-storage.md  BRN-SPEC-012-api.md
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json
scripts/: setup.ps1
tests/unit/: test_ai.py  test_core.py  test_importer.py  test_search.py  test_shared.py  test_storage.py
